# disclosure-evaluator

./: .env.example  .gitignore  AGENTS.md  README.md  REQUIREMENTS_SPECIFICATION.md  evaluator.py  main.py  pyproject.toml  requirements.txt  run_fastapi_tests.py
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
api/: __init__.py  lambda_handler.py  main.py
api/config/: __init__.py  settings.py
api/endpoints/: __init__.py  batch.py  evaluation.py  health.py  status.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
api/models/: __init__.py  errors.py  requests.py  responses.py
api/services/: __init__.py  batch_service.py  evaluation_service.py  status_service.py
criteria/: administrative_information_non_disclosure.json  disclosure_evaluation_criteria.json  multi-criteria_decision_making_framework.json
deployment/fastapi/: README.md  requirements.txt
deployment/lambda/: README.md  deploy.sh  requirements.txt  template.yaml  test_lambda.py
docs/: AGENTS.md  README.md
docs/api/: openapi.yaml
docs/architecture/: domain-driven-design.md  hexagonal-architecture.md  overview.md
docs/domain/entities/: evaluation.md  legal-criteria.md
docs/domain/value-objects/: score.md
docs/stakeholders/business/: executive-summary.md
docs/stakeholders/development/: getting-started.md
docs/stakeholders/end-users/: user-manual.md
docs/technical/api/: cli-commands.md
docs/technical/data-models/: pydantic-models.md
documents/: sample1_personal_info.txt  sample2_corporate_info.txt  sample3_public_safety.txt
prompts/: system_score_reasoning.md  system_step_evaluation.md  user_step_template.md
sample_documents/: README.md  administrative_operation_sample.txt  corporate_info_sample.txt  internal_deliberation_sample.txt  national_security_sample.txt  personal_info_sample.txt  public_safety_sample.txt
specs/001-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-/contracts/: batch-evaluation-api.yaml
specs/003-api/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-api/contracts/: openapi.yaml
src/: __init__.py
src/batch/: __init__.py  evaluator.py
src/batch/services/: __init__.py  discovery.py  persistence.py  processing.py
src/cli/: __init__.py  commands.py
src/config/: __init__.py  manager.py  prompts.py
src/evaluators/: __init__.py  criterion_evaluator.py  disclosure_evaluator.py  result_aggregator.py  step_evaluator.py
src/llm/: __init__.py  factory.py  providers.py
src/models/: __init__.py  batch.py  evaluation.py
src/utils/: __init__.py  criteria.py  formatters.py  logging.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_fastapi_batch.py  test_fastapi_evaluation.py  test_fastapi_health.py  test_fastapi_status.py  test_lambda_handler.py
tests/contract/: test_batch_api.py
tests/fixtures/sample_documents/: doc1.txt  doc2.txt  doc3.txt
tests/integration/: test_batch_errors.py  test_batch_folder.py  test_batch_mixed_types.py  test_batch_processing.py  test_batch_processing_simple.py  test_batch_progress.py  test_cli_commands.py  test_end_to_end_evaluation.py
tests/unit/: test_batch_evaluator.py  test_batch_models.py  test_batch_persistence.py  test_cli.py  test_config_manager.py  test_criterion_evaluator.py  test_disclosure_evaluator.py  test_document_discovery.py  test_llm_providers.py  test_load_criteria.py  test_models.py  test_parallel_processing.py  test_result_aggregator.py  test_state_persistence.py  test_step_evaluator.py
